# integrated-shrinking

./: integrated-shrinking.cabal
test/: MagicLength.hs
