cabal-version:       >=1.10
name:                integrated-shrinking
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     IntegratedShrinking
  build-depends:       base >=4.12 && <4.13, random
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite magic-length
  hs-source-dirs: test
  main-is: MagicLength.hs
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends: base
               -- Local deps
               , integrated-shrinking
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               "-with-rtsopts=-K1m -M50m"
